[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsa-scratch"
version = "0.1.0"
description = "RSA public-key cryptography implemented from first principles in pure Python (educational only)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "rsa-from-scratch contributors" }]
keywords = ["rsa", "cryptography", "education", "number-theory", "miller-rabin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Education",
]
dependencies = []  # standard library only -- that is the whole point

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/wei-chen-7/rsa-from-scratch"
Repository = "https://github.com/wei-chen-7/rsa-from-scratch"

[tool.setuptools]
packages = ["rsa_scratch"]

[tool.pytest.ini_options]
# Let tests import the package without an install step.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
